tests/invalid/purity/impure_pred_t2.err_exp
impure_pred_t2.m:019: In clause for predicate `impure_pred_t2.main/2':
impure_pred_t2.m:019:   in argument 1 (i.e. the predicate term) of higher-order predicate call:
impure_pred_t2.m:019:   type error: variable `Y' has type `(impure pred(int, int))',
impure_pred_t2.m:019:   expected type was `pred(V_2, V_1)'.
For more information, try recompiling with `-E'.
